Uploaded secured data project

--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -1,1 +1,7 @@
-host all all all trust
+host students +g_school samenet scram-sha-256 # Allow students to connect from the school network
+host teachers +g_school samenet scram-sha-256 # Allow teachers to connect from the school network
+hostssl all u_principal_skinner all scram-sha-256 # Allow principal_skinner to connect from any network on a secure connection
+hostssl all +g_district 235.84.86.65/32 scram-sha-256 # Allow anyone in the district group to connect from the district network on a secure connection
+host all all all reject # default deny rule at the end of the file
+
+# removing insecure config --> host all all all trust
