--- a/postgresql.conf
+++ b/postgresql.conf
@@ -1,5 +1,7 @@
-listen_addresses = '*walkThrough://vscode_getting_started_page'
-port = 5432
-ssl = off
+# PostgreSQL configuration file
+
+listen_addresses = 'localhost, 235.84.86.65' # Locking down to school network and the district network
+port = 61342 # Changing the port to obscure number to prevent attacks
+ssl = on # Enabling SSL to encrypt data
 log_connections = yes
 log_destination = 'syslog'
